comecei a escrever conteúdo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem porro quod reiciendis ullam incidunt sequi pariatur doloribus facilis facere repellat. Earum minus modi ipsam ducimus veritatis sit vero quasi suscipit?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de javascript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui architecto esse animi distinctio, officia maiores sapiente vero tempore, magnam corporis facilis repudiandae adipisci possimus aperiam, neque voluptates fugit fuga at?</p>
         </article>
     </main>
 </body>
